# ssc-sp-dr-evaluation

./: CHANGELOG_v1.0.1.md  CITATION.cff  README.md  environment.yml  pyproject.toml  requirements-bert.txt  requirements.txt
config/: lambda.yaml  mnist.yaml  synthetic.yaml  things.yaml
data/results/: fig1_semantic_noise_control.csv  fig1a_coordinate_noise.csv  fig1b_metric_vs_topology.csv  fig2_baseline_null_raw.csv  fig2_baseline_null_summary.csv  fig2b_generalization.csv  fig3_lambda_bert.csv  fig3_lambda_synth.csv  mnist_results.csv  s4_sensitivity.json  supp_dimension_n_robustness.csv  supp_knn_k_robustness.csv  supp_layout_topology_robustness.csv  things_table1_raw.csv  things_table1_summary.csv
data/things/: README.md
docs/: legacy_mapping.md  metric_definitions.md
scripts/: check_banned_terms.py  make_figure_s4.py  make_figures.py  make_manuscript_figures.py  make_supplementary_figures.py  prepare_bert_embeddings.py  reproduce_mnist.py  reproduce_things.py  run_baseline_null.py  run_lambda.py  run_robustness.py  run_synthetic.py
ssc_sp/: __init__.py  deterministic.py  io.py  layouts.py  metrics.py  perturbations.py
tables/: generate_hyperparameter_table.py  hyperparameter_table.csv  hyperparameter_table.tex
tests/: conftest.py  test_banned_terms.py  test_determinism.py  test_metrics.py  test_reproduce_table1.py
