[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssc-sp-dr-evaluation"
version = "1.0.0"
description = "Semantic-spatial alignment and decomposed structural preservation for dimensionality-reduction visualization evaluation"
readme = "README.md"
authors = [{ name = "Hideki" }]
license = { text = "MIT" }
requires-python = ">=3.10,<3.11"
keywords = [
    "dimensionality-reduction",
    "visualization-evaluation",
    "structural-preservation",
    "semantic-spatial-correlation",
    "reproducibility",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "numpy==1.24.3",
    "scipy==1.10.1",
    "pandas==2.0.3",
    "matplotlib==3.7.2",
    "scikit-learn==1.3.0",
    "umap-learn==0.5.12",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
bert = [
    "transformers>=4.30.0,<5.0.0",
    "torch>=2.0.0,<3.0.0",
    "sentence-transformers>=2.2.0",
]
test = ["pytest==7.4.0"]

[tool.setuptools]
packages = ["ssc_sp"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
